<resources>
    <string name="app_name">AutoBrowse</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Maximum Count</string>
    <string name="pref_default_display_name">10</string>


    <string name="pref_interval_display_name">Sleep Interval</string>
    <string name="pref_default_interval_name">30</string>
    <!-- url -->
    <string name="pref_url_display_name">Server URL</string>
    <string name="pref_default_url_name">https://duck2server.herokuapp.com</string>
    <!-- token-->
    <string name="pref_token_display_name">Token</string>
    <string name="pref_default_token_name">33c79212-d803-422f-97e1-006b8b45fbdf</string>

    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_browse">BrowseActivity</string>

    <!--foreground service-->
    <string name="notification_title">AutoBrowser</string>
    <string name="notification_message">Service is started.</string>
    <string name="ticker_text">Start to browse..</string>

</resources>
