<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="numberDecimal"
        android:key="max_count"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_interval_name"
        android:inputType="numberDecimal"
        android:key="sleep_interval"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_interval_display_name" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_url_name"
        android:inputType="text"
        android:key="server_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_url_display_name" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_token_name"
        android:inputType="text"
        android:key="token"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_token_display_name" />
</PreferenceScreen>
